--- a/style/contact.css
+++ b/style/contact.css
@@ -293,4 +293,9 @@
   .portfolio-main-page-div img {
     width: 85%;
   }
+}
+@media (max-width: 440px) {
+  .skills-task {
+    margin: 10px 0px 0 0px;
+  }
 }/*# sourceMappingURL=contact.css.map */
