--- a/sass/style.css
+++ b/sass/style.css
@@ -794,4 +794,9 @@ html {
   .portfolio-main-page-div img {
     width: 85%;
   }
+}
+@media (max-width: 440px) {
+  .skills-task {
+    margin: 10px 0px 0 0px;
+  }
 }/*# sourceMappingURL=style.css.map */
