--- a/sass/style.css
+++ b/sass/style.css
@@ -8,10 +8,13 @@ html {
 }
 
 .header {
-  margin: 0 auto;
   max-width: 100%;
   position: fixed;
-  top: 650px;
+  top: 89vh;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,7 +69,7 @@ html {
   width: 100%;
   position: fixed;
   text-align: center;
-  top: 690px;
+  top: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
