--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,6 @@
-@import "./index/index.scss";
-
-
-@import "../style/contact.scss"
+// @import "./index/index.scss";
+// @import "./about/About.scss";
+@import "./contact/Contact.scss";
+@import "./header/header.scss";
+@import "./home/Home.scss";
+// @import "../style/contact.scss"
