--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,11 @@
-// @import "./index/index.scss";
-// @import "./about/About.scss";
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import "./skills/Skills.scss";
+@import "./index/index.scss";
+@import "./about/About.scss";
 @import "./contact/Contact.scss";
 @import "./header/header.scss";
 @import "./home/Home.scss";
-// @import "../style/contact.scss"
+@import "./portfolio/Portfolio.scss";
+@import "./contact/Contact.scss";
+@import "./res/Res.scss";
+
