--- a/sass/header/header.scss
+++ b/sass/header/header.scss
@@ -1,96 +1,114 @@
-.header{
-    // margin: 0 auto;
-    max-width: 100%;
-    position: fixed;
-    top: 89vh;
-    // position: absolute; 
-    left: 0; 
-    right: 0; 
-    margin-left: auto; 
-    margin-right: auto; 
-    // width: 100px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-    z-index: 1;
-    
-    &-main{
-      position: relative;
-      width: 700px;
-    height:70px;
+.header {
+  // margin: 0 auto;
+  width: 97%;
+  position: fixed;
+  top: 80vh;
+  // position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  // width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+
+  &-main {
+    position: relative;
+    width: 700px;
+    height: 70px;
     background: #272727;
     border-radius: 20px;
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, 
-                rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+      rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    &-page {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      .house {
+        text-align: center;
+
+        i {
+          margin: 10px 10px 0 0;
+          font-size: 20px;
+          color: #ffffff;
+        }
+        p {
+          margin: 0 10px 0 0;
+          color: #ffffff;
+          font-family: "Nunito", sans-serif;
+          font-size: 20px;
+        }
+      }
+      .house:hover {
+        i {
+          color: re;
+        }
+        p {
+          color: aqua;
+        }
+      }
+    }
+  }
+  &-button {
+    background: none;
+    border: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    i {
+      color: #ffffff;
+      font-size: 15px;
+    }
+  }
+}
+.div {
+  margin: 0 auto;
+  width: 100%;
+  position: fixed;
+  text-align: center;
+  top: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  &-button {
+    i {
+      position: relative;
+      top: 0;
+      animation: button 2s linear 2s infinite alternate;
+    }
+  }
+}
+@keyframes button {
+  0% {
+    top: 5px;
+  }
+  25% {
+    top: 10px;
+  }
+  50% {
+    top: 20px;
+  }
+  75% {
+    top: 10px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+
+@media (max-width: 750px) {
+  .header{
+    &-main{
       &-page{
-          display: flex;
-          justify-content: space-around;
-          align-items: center;
         .house{
-          text-align: center;
-          
-          i{
-              margin: 10px 10px 0 0;
-              font-size: 20px;
-              color: #FFFFFF;
-          }
           p{
-              margin: 0 10px 0 0 ;
-              color: #FFFFFF;
-              font-family: 'Nunito', sans-serif;
-              font-size: 20px;
+            font-size: 18px;
           }
-      }
-      .house:hover{
-          i{
-              color: re;
-  
-          }
-          p{
-              color: aqua;
-          }
-      }
-      }
-    }
-    &-button{
-      background: none;
-      border: none;
-      position: absolute;
-      top:10px;
-      right: 10px;
-      i{
-        color: #FFFFFF;
-        font-size: 15px;
+        }
       }
     }
   }
-  .div{
-    margin: 0 auto;
-    width: 100%;
-    position: fixed;
-    text-align: center;
-    top: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    &-button{
-      i{
-        position: relative;
-        top: 0;
-        animation: button 2s linear 2s infinite alternate;
-  
-      }
-      
-    }
-  
-  }
-  @keyframes button {
-    0% {top: 5px;}
-    25% {top: 10px;}
-    50% {top: 20px;}
-    75% {top: 10px;}
-    100% {top: 0px;}                              
-    
-    
-  }
+}
