--- a/sass/home/Home.scss
+++ b/sass/home/Home.scss
@@ -1,6 +1,14 @@
+.container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .home{
     font-family: 'Nunito', sans-serif;
-      width: 100%;
+      width: 1550px;
       min-height: 90vh;
       background: #FFFFFF;    
     &-main{
@@ -8,7 +16,7 @@
       justify-content: space-around;
       align-items: center;
       height: 100%;
-      margin: 100px 200px 0px 70px;
+      margin: 100px 70px 0px 70px;
       
       &-div{
         padding: 60px 0 0 0;
@@ -93,3 +101,56 @@
     
     
   }
+
+  @media (max-width: 1600px) {
+    .home{
+      width: 100%;
+      
+    }
+}
+
+@media (max-width: 1200px) {
+    .home{
+      width: 100%;
+      &-main{
+        margin: 100px 70px 0px 70px;
+      }
+    }
+}
+@media (max-width: 1100px) {
+  .home{
+    &-main{
+      margin: 100px 40px 0px 40px;
+    }
+  }
+}
+@media (max-width: 1000px) {
+  .home{
+    &-main{
+      margin: 100px  3% 0px  3%;
+    }
+  }
+}
+@media (max-width: 1000px) {
+  .home{
+    &-main{
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+}
+@media (max-width: 615px) {
+  .home{
+    &-main{
+      flex-direction: column-reverse;
+      &-center{
+        width: 100%;
+      }
+      &-div{
+        display: flex;
+        // flex-direction: column;
+        padding: 20px 0 0 0 ;
+      }
+    }
+  }
+}
