--- a/sass/skills/Skills.scss
+++ b/sass/skills/Skills.scss
@@ -1,6 +1,6 @@
 .skills{
     background: #FFFFFF;
-    width: 100%;
+    width: 1500px;
     min-height: 100vh;
     text-align: center;
     h1{
@@ -19,7 +19,7 @@
       justify-content: space-around;
       align-items: center;
       flex-wrap: wrap;
-      margin: 100px 250px 20px 250px;
+      margin: 100px 50px 20px 50px;
       &-front{
         width: 400px;
         height: 300px;
@@ -71,3 +71,12 @@
       }
     }
   }
+  
+@media (max-width: 1500px) {
+  .skills{
+    width: 100%;
+    &-task{
+      margin: 100px 0 50px 0;
+    }
+  }
+}
