--- a/sass/style.css
+++ b/sass/style.css
@@ -1,806 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Nunito&display=swap");
-* {
-  text-decoration: none;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-.header {
-  max-width: 100%;
-  position: fixed;
-  top: 89vh;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-}
-.header-main {
-  position: relative;
-  width: 700px;
-  height: 70px;
-  background: #272727;
-  border-radius: 20px;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-}
-.header-main-page {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.header-main-page .house {
-  text-align: center;
-}
-.header-main-page .house i {
-  margin: 10px 10px 0 0;
-  font-size: 20px;
-  color: #FFFFFF;
-}
-.header-main-page .house p {
-  margin: 0 10px 0 0;
-  color: #FFFFFF;
-  font-family: "Nunito", sans-serif;
-  font-size: 20px;
-}
-.header-main-page .house:hover i {
-  color: aqua;
-}
-.header-main-page .house:hover p {
-  color: aqua;
-}
-.header-button {
-  background: none;
-  border: none;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-.header-button i {
-  color: #FFFFFF;
-  font-size: 15px;
-}
-
-.div {
-  margin: 0 auto;
-  width: 100%;
-  position: fixed;
-  text-align: center;
-  top: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-}
-.div-button i {
-  position: relative;
-  top: 0;
-  animation: button 2s linear 2s infinite alternate;
-}
-
-@keyframes button {
-  0% {
-    top: 5px;
-  }
-  25% {
-    top: 10px;
-  }
-  50% {
-    top: 20px;
-  }
-  75% {
-    top: 10px;
-  }
-  100% {
-    top: 0px;
-  }
-}
-.home {
-  font-family: "Nunito", sans-serif;
-  width: 100%;
-  min-height: 90vh;
-  background: #FFFFFF;
-}
-.home-main {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
-  margin: 100px 200px 0px 70px;
-}
-.home-main-div {
-  padding: 60px 0 0 0;
-}
-.home-main-div-i {
-  padding: 20px;
-}
-.home-main-div-i i {
-  font-size: 25px;
-}
-.home-main-center {
-  width: 500px;
-}
-.home-main-center-div {
-  display: flex;
-  justify-content: space-around;
-  height: 20px;
-  align-items: center;
-  width: 300px;
-}
-.home-main-center-div-div {
-  width: 70px;
-  height: 2px;
-  background: #272727;
-}
-.home-main-center-div p {
-  margin: 0px 20px 0 0;
-}
-.home-main-center h1 {
-  font-family: "Nunito", sans-serif;
-  font-size: 50px;
-}
-.home-main-center p {
-  font-family: "Nunito", sans-serif;
-  font-size: 20px;
-}
-.home-main-left {
-  padding: 20px 0 0 0;
-}
-.home-main-left img {
-  border: 4px solid #0F0742;
-  border-radius: 54% 46% 32% 68%/53% 50% 50% 47%;
-}
-.home-scroll {
-  padding: 80px 0px 0px 140px;
-  width: 100px;
-  top: 0;
-  position: relative;
-}
-.home-scroll p {
-  rotate: -90deg;
-  position: absolute;
-  top: 1px;
-  left: 110px;
-}
-.home-scroll a {
-  color: #272727;
-  position: relative;
-  top: 0;
-  left: 1px;
-  font-size: 25px;
-  animation: myfirst 2s linear 2s infinite alternate;
-}
-
-@keyframes myfirst {
-  0% {
-    top: 5px;
-  }
-  25% {
-    top: 10px;
-  }
-  50% {
-    top: 20px;
-  }
-  75% {
-    top: 10px;
-  }
-  100% {
-    top: 0px;
-  }
-}
-.about {
-  background: #FFFFFF;
-  width: 100%;
-  min-height: 100vh;
-  text-align: center;
-}
-.about-sub {
-  font-size: 40px;
-  font-family: "Nunito", sans-serif;
-}
-.about-text {
-  font-size: 20px;
-  font-family: "Nunito", sans-serif;
-}
-.about-main {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-items: center;
-  margin: 50px 150px 0 150px;
-}
-.about-main-img img {
-  border-radius: 20px;
-  border: 1px solid #0F0742;
-  box-shadow: 0 0 5px 6px rgba(0, 0, 0, 0.2);
-  filter: grayscale(90%);
-}
-.about-main-work {
-  margin: 20px 0 20px 0;
-  width: 450px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: justify;
-  justify-content: space-around;
-}
-.about-main-work-page {
-  display: flex;
-  justify-content: space-between;
-  width: 450px;
-  align-items: start;
-  margin: -10px 0 0 0;
-}
-.about-main-work-page-div {
-  width: 120px;
-  height: 100px;
-  background: white;
-  border-radius: 10px;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-.about-main-work-page-div i {
-  margin: 7px 0 0 0;
-  font-size: 20px;
-  color: black;
-}
-.about-main-work-page-div-text {
-  margin: 0 0 0 0;
-  color: black;
-  font-size: 20px;
-  font-family: "Nunito", sans-serif;
-}
-.about-main-work-page-div-sub {
-  margin: 0 0 10px 0;
-  font-size: 15px;
-  font-family: "Nunito", sans-serif;
-}
-.about-main-work-text {
-  font-size: 20px;
-  font-family: "Nunito", sans-serif;
-  margin: 60px 0 0 0;
-}
-.about-main-work-btn {
-  width: 200px;
-  height: 50px;
-  font-size: 20px;
-  color: white;
-  font-family: "Nunito", sans-serif;
-  background: #272727;
-  border-radius: 10px;
-  margin: 62px 0 0 0;
-}
-.about-main-work-btn i {
-  font-size: 25px;
-}
-
-.skills {
-  background: #FFFFFF;
-  width: 100%;
-  min-height: 100vh;
-  text-align: center;
-}
-.skills h1 {
-  font-size: 40px;
-  font-family: "Nunito", sans-serif;
-  color: black;
-}
-.skills p {
-  font-size: 20px;
-  font-family: "Nunito", sans-serif;
-  color: black;
-}
-.skills-task {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 100px 250px 20px 250px;
-}
-.skills-task-front {
-  width: 400px;
-  height: 300px;
-  border-radius: 20px;
-  margin: 20px;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-}
-.skills-task-front-sub {
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-  font-size: 20px;
-  margin: 30px 0 15px 0;
-}
-.skills-task-front-page {
-  display: flex;
-  justify-content: space-around;
-  margin: -14px 0 0 0;
-}
-.skills-task-front-page-div {
-  display: flex;
-  justify-content: start;
-  flex-direction: column;
-}
-.skills-task-front-page-div .basic {
-  margin: -20px 0 13px -5px;
-  font-size: 15px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-}
-.skills-task-front-page-div-main {
-  display: flex;
-  justify-content: start;
-  text-align: center;
-  margin: 4px -50px 0 -25px;
-}
-.skills-task-front-page-div-main i {
-  margin: 26px 10px 0px -5px;
-}
-.skills-task-front-page-div-main p {
-  padding: 2px 0 0 0;
-  font-size: 18px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-  font-weight: 600;
-}
-
-.portfolio {
-  background: #FFFFFF;
-  width: 100%;
-  min-height: 110vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.portfolio h1 {
-  font-size: 40px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-  margin: 0 0 -5px 0;
-}
-.portfolio p {
-  font-size: 20px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-}
-.portfolio-main {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.portfolio-main-button button {
-  transition: 0.5s;
-  width: 200px;
-  height: 50px;
-  font-size: 20px;
-  color: #FFFFFF;
-  font-family: "Nunito", sans-serif;
-  background: #272727;
-  border-radius: 10px;
-}
-.portfolio-main-page {
-  margin: 50px 100px 0 100px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.portfolio-main-page-div {
-  width: 400px;
-  height: 370px;
-  background: white;
-  border-radius: 20px;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
-  margin: 30px 30px;
-}
-.portfolio-main-page-div img {
-  width: 350px;
-  border-radius: 20px;
-  margin: 15px 0 0 25px;
-}
-.portfolio-main-page-div-true .p {
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-  font-size: 20px;
-  margin: 10px 10px 0 25px;
-  font-weight: 700;
-}
-.portfolio-main-page-div-true button {
-  margin: 10px 0px 0 24px;
-  font-size: 15px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-  background: none;
-  border: none;
-}
-
-.contact {
-  width: 100%;
-  min-height: 100vh;
-  background: #FFFFFF;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-.contact-talk h1 {
-  font-size: 40px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-}
-.contact-talk-div {
-  margin: 25px 0 0 0;
-  width: 350px;
-  height: 170px;
-  background: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
-  border-radius: 30px;
-}
-.contact-talk-div i {
-  font-size: 35px;
-  color: #272727;
-}
-.contact-talk-div h1 {
-  margin: -20px 0 0 0;
-  font-size: 20px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-}
-.contact-talk-div P {
-  margin: -30px 0 0 0;
-  font-size: 15px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-}
-.contact-talk-div P a {
-  color: #272727;
-}
-.contact-talk-div button {
-  border: none;
-  background: none;
-  color: #272727;
-  font-size: 15px;
-  font-family: "Nunito", sans-serif;
-}
-.contact-talk-div button .fa-arrow-right {
-  color: #272727;
-  font-size: 12px;
-}
-.contact-massage {
-  height: 200px;
-}
-.contact-massage h1 {
-  font-size: 40px;
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-}
-.contact-massage-div-main {
-  position: relative;
-  height: 50px;
-  width: 350px;
-  border: 2px solid #272727;
-  display: flex;
-}
-.contact-massage-div-main p {
-  color: #272727;
-  font-family: "Nunito", sans-serif;
-  top: 0;
-  position: absolute;
-}
-.contact-massage-div-main input {
-  width: 100%;
-  border: none;
-  background: none;
-}
-
-@media (max-width: 1315px) {
-  .home-main {
-    margin: 100px 55px 0px 55px;
-  }
-  .home-main-div {
-    padding: 60px 0 0 0;
-  }
-  .home-main-div-i {
-    padding: 20px;
-  }
-  .home-main-div-i i {
-    font-size: 25px;
-  }
-  .home-main-center {
-    width: 500px;
-  }
-  .home-main-center-div {
-    display: flex;
-    justify-content: space-around;
-    height: 20px;
-    align-items: center;
-    width: 300px;
-  }
-  .home-main-center-div-div {
-    width: 70px;
-    height: 2px;
-    background: #272727;
-  }
-  .home-main-center-div p {
-    margin: 0px 20px 0 0;
-  }
-  .home-main-center h1 {
-    font-family: "Nunito", sans-serif;
-    font-size: 50px;
-  }
-  .home-main-center p {
-    font-family: "Nunito", sans-serif;
-    font-size: 20px;
-  }
-  .home-main-left {
-    padding: 20px 0 0 0;
-  }
-  .home-main-left img {
-    border: 4px solid #0F0742;
-    border-radius: 54% 46% 32% 68%/53% 50% 50% 47%;
-  }
-  .home-scroll {
-    padding: 80px 0px 0px 140px;
-    width: 100px;
-    position: relative;
-  }
-  .home-scroll p {
-    rotate: -90deg;
-    position: absolute;
-    top: 1px;
-    left: 110px;
-  }
-  .home-scroll a {
-    color: #272727;
-    position: relative;
-    top: 0;
-    left: 1px;
-    font-size: 25px;
-    animation: myfirst 2s linear 2s infinite alternate;
-  }
-  .portfolio-main-page {
-    margin: 50px 0 0 0;
-  }
-  .contact-talk-div button .fa-arrow-right {
-    color: #272727;
-    font-size: 12px;
-  }
-  .contact-massage {
-    height: 200px;
-  }
-  .contact-massage h1 {
-    font-size: 40px;
-    color: #272727;
-    font-family: "Nunito", sans-serif;
-  }
-  .contact-massage-div-main {
-    position: relative;
-    height: 50px;
-    width: 350px;
-    border: 2px solid #272727;
-    display: flex;
-  }
-  .contact-massage-div-main p {
-    color: #272727;
-    font-family: "Nunito", sans-serif;
-    top: 0;
-    position: absolute;
-  }
-  .contact-massage-div-main input {
-    width: 100%;
-    border: none;
-    background: none;
-  }
-}
-@media (max-width: 1406px) {
-  .skills-task {
-    margin: 100px 140px 0 140px;
-  }
-}
-@media (max-width: 1267px) {
-  .about-main {
-    margin: 50px 80px 0 80px;
-  }
-}
-@media (max-width: 1205px) {
-  .home-main {
-    padding: 20px 0 20px 0;
-    margin: 100px 20px 0px 20px;
-  }
-  .home-main-div {
-    padding: 60px 0 0 0;
-  }
-  .home-main-div-i {
-    padding: 20px;
-  }
-  .home-main-div-i i {
-    font-size: 25px;
-  }
-  .home-main-center {
-    width: 500px;
-  }
-  .home-main-center-div {
-    display: flex;
-    justify-content: space-around;
-    height: 20px;
-    align-items: center;
-    width: 300px;
-  }
-  .home-main-center-div-div {
-    width: 70px;
-    height: 2px;
-    background: #272727;
-  }
-  .home-main-center-div p {
-    margin: 0px 20px 0 0;
-  }
-  .home-main-center h1 {
-    font-family: "Nunito", sans-serif;
-    font-size: 50px;
-  }
-  .home-main-center p {
-    font-family: "Nunito", sans-serif;
-    font-size: 20px;
-  }
-  .home-main-left {
-    padding: 20px 0 0 0;
-  }
-  .home-main-left img {
-    border: 4px solid #0F0742;
-    border-radius: 54% 46% 32% 68%/53% 50% 50% 47%;
-  }
-  .home-scroll {
-    padding: 80px 0px 0px 140px;
-    width: 100px;
-    position: relative;
-  }
-  .home-scroll p {
-    rotate: -90deg;
-    position: absolute;
-    top: 1px;
-    left: 110px;
-  }
-  .home-scroll a {
-    color: #272727;
-    position: relative;
-    top: 0;
-    left: 1px;
-    font-size: 25px;
-    animation: myfirst 2s linear 2s infinite alternate;
-  }
-  .skills-task {
-    margin: 100px 60px 0 60px;
-  }
-  .contact-talk-div button .fa-arrow-right {
-    color: #272727;
-    font-size: 12px;
-  }
-  .contact-massage {
-    height: 200px;
-  }
-  .contact-massage h1 {
-    font-size: 40px;
-    color: #272727;
-    font-family: "Nunito", sans-serif;
-  }
-  .contact-massage-div-main {
-    position: relative;
-    height: 50px;
-    width: 350px;
-    border: 2px solid #272727;
-    display: flex;
-  }
-  .contact-massage-div-main p {
-    color: #272727;
-    font-family: "Nunito", sans-serif;
-    top: 0;
-    position: absolute;
-  }
-  .contact-massage-div-main input {
-    width: 100%;
-    border: none;
-    background: none;
-  }
-}
-@media (max-width: 1100px) {
-  .home-main {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .about-main {
-    margin: 50px 30px 0 30px;
-  }
-  .skills-task {
-    margin: 100px 15px 0 15px;
-  }
-}
-@media (max-width: 950px) {
-  .about-main-work {
-    margin: 45px 0 45px 0px;
-  }
-}
-@media (max-width: 928px) {
-  .home-scroll {
-    top: -170px;
-  }
-}
-@media (max-width: 928px) {
-  .portfolio-main-button button {
-    width: 150px;
-  }
-  .home-scroll {
-    top: -170px;
-  }
-}
-@media (max-width: 601px) {
-  .about-main-img img {
-    width: 100%;
-  }
-  .about-main-work {
-    width: 100%;
-  }
-  .about-main-work-page {
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-  .about-main-work-page-div {
-    margin: 10px;
-  }
-  .skills-task {
-    margin: 10px 25px 0 25px;
-  }
-  .skills-task-front {
-    max-width: 100%;
-  }
-}
-@media (max-width: 620px) {
-  .home-main {
-    padding: 0px 0 20px 0;
-    margin: 0px 20px 0px 20px;
-    display: flex;
-    flex-wrap: wrap-reverse;
-  }
-  .home-main-div {
-    display: flex;
-    padding: 0;
-  }
-}
-@media (max-width: 470px) {
-  .header-main-page .house i {
-    font-size: 15px;
-  }
-  .header-main-page .house i p {
-    font-size: 15px;
-  }
-  .portfolio-main-button {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .portfolio-main-button button {
-    margin: 5px;
-  }
-  .portfolio-main-page-div {
-    width: 100%;
-  }
-  .portfolio-main-page-div img {
-    width: 85%;
-  }
-}
-@media (max-width: 440px) {
-  .skills-task {
-    margin: 10px 0px 0 0px;
-  }
-}/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+@import "./skills/Skills.css";
+@import "./index/index.css";
+@import "./about/About.css";
+@import "./contact/Contact.css";
+@import "./header/header.css";
+@import "./home/Home.css";
+@import "./portfolio/Portfolio.css";
+@import "../style/contact.css";/*# sourceMappingURL=style.css.map */
