--- a/sass/contact/Contact.scss
+++ b/sass/contact/Contact.scss
@@ -91,3 +91,15 @@
       }
     }
   }
+
+
+  @media (max-width: 350px) {
+    .contact{
+      &-talk{
+        width: 100%;
+        &-div{
+          width: 100%;
+        }
+      }
+    }
+  }
