--- a/sass/portfolio/Portfolio.scss
+++ b/sass/portfolio/Portfolio.scss
@@ -43,7 +43,7 @@
       justify-content: center;
       &-div {
         width: 400px;
-        height: 370px;
+        padding: 0 0  20px 0;
         background: white;
         border-radius: 20px;
         box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
@@ -82,6 +82,38 @@
     &-main{
       &-page{
         // margin: ;
+      }
+    }
+  }
+}
+@media (max-width: 500px) {
+  .portfolio{
+      width: 100%;
+    &-main{
+      &-page{
+        margin: 50px 0 0 0 ;
+        text-align: center;
+        &-div{
+          margin: 20px 0;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 400px) {
+  .portfolio{
+
+    &-main{
+      &-page{
+       
+        &-div{
+          width: 100%;
+          
+          img{
+            width: 90%;
+            margin: 2px;
+          }
+        }
       }
     }
   }
