--- a/sass/about/About.css
+++ b/sass/about/About.css
@@ -114,7 +114,7 @@
     justify-content: center;
   }
   .about-main-work-page-div {
-    margin: 0 5px;
+    margin: 0 5px 12px 0;
   }
   .about-main-img img {
     width: 100%;
