--- a/sass/about/About.scss
+++ b/sass/about/About.scss
@@ -133,7 +133,7 @@
           text-align: center;
           justify-content: center;
          &-div{
-          margin: 0 5px;
+          margin: 0 5px 12px 0;
          }
         }
       }
