--- a/sass/home/Home.css
+++ b/sass/home/Home.css
@@ -1,21 +1,27 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0 10px 0 10px;
 }
 
 @media (max-width: 450px) {
   .container {
-    margin: 0 5px;
+    margin: 0 5px 0 5px;
   }
 }
 .home {
   font-family: "Nunito", sans-serif;
   width: 1550px;
   min-height: 90vh;
-  background: #FFFFFF;
+  background: #ffffff;
 }
 .home-main {
   display: flex;
@@ -35,6 +41,10 @@
 }
 .home-main-center {
   width: 500px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 300px;
 }
 .home-main-center-div {
   display: flex;
@@ -63,7 +73,7 @@
   padding: 20px 0 0 0;
 }
 .home-main-left img {
-  border: 4px solid #0F0742;
+  border: 4px solid #0f0742;
   border-radius: 54% 46% 32% 68%/53% 50% 50% 47%;
 }
 .home-scroll {
@@ -144,6 +154,17 @@
   .home-main-div {
     display: flex;
     padding: 20px 0 0 0;
+  }
+}
+@media (max-width: 450px) {
+  .home-main-center h1 {
+    font-size: 40px;
+  }
+  .home-main-center-div-div {
+    width: 50px;
+  }
+  .home-main-left img {
+    width: 100%;
   }
 }
 @media (max-width: 300px) {
