--- a/sass/home/Home.scss
+++ b/sass/home/Home.scss
@@ -1,186 +1,220 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
-
-.container{
+.container {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  margin: 0 10px 0 10px;
 }
-@media (max-width : 450px) {
-  .container{
-    margin: 0 5px;
+@media (max-width: 450px) {
+  .container {
+    margin: 0 5px 0 5px;
   }
 }
 
-.home{
-    font-family: 'Nunito', sans-serif;
-      width: 1550px;
-      min-height: 90vh;
-      background: #FFFFFF;    
-    &-main{
+.home {
+  font-family: "Nunito", sans-serif;
+  width: 1550px;
+  min-height: 90vh;
+  background: #ffffff;
+  &-main {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    margin: 100px 70px 0px 70px;
+
+    &-div {
+      padding: 60px 0 0 0;
+      &-i {
+        padding: 20px;
+
+        i {
+          font-size: 25px;
+        }
+      }
+    }
+    &-center {
+      width: 500px;
       display: flex;
       justify-content: space-around;
-      align-items: center;
-      height: 100%;
-      margin: 100px 70px 0px 70px;
-      
-      &-div{
-        padding: 60px 0 0 0;
-        &-i{
-          padding: 20px;
-          
-          i{
-              font-size: 25px;
-          }
-        }
-          
-      }
-      &-center{
-        width: 500px;
-        &-div{
-          display: flex;
-          justify-content: space-around;
-          height: 20px;
-          align-items: center;
-          width: 300px;
-          &-div{
+      flex-direction: column;
+      height: 300px;
+      &-div {
+        display: flex;
+        justify-content: space-around;
+        height: 20px;
+        align-items: center;
+        width: 300px;
+        &-div {
           width: 70px;
           height: 2px;
           background: #272727;
-          }
-          p{
-            margin: 0px 20px 0 0 ;
-              
-          }
         }
-          h1{
-            font-family: 'Nunito', sans-serif;
-            font-size: 50px;
-          }
-          p{
-            font-family: 'Nunito', sans-serif;
-            font-size: 20px;
-            // margin: 20px 0 0 0 ;
-          }
-  
-      }
-      &-left{
-        padding: 20px 0 0 0;
-        img{
-          border: 4px solid  #0F0742;
-          // width: 352px;
-          
-          border-radius:54% 46% 32% 68% / 53% 50% 50% 47% ;
+        p {
+          margin: 0px 20px 0 0;
         }
       }
-    }
-    &-scroll{
-      padding: 80px 0px 0px 140px;                   
-      width: 100px;
-      top: 0;
-      position: relative;
-      p{
-        rotate: -90deg;
-        position: absolute;
-        top: 1px ;
-        left:  110px;
+      h1 {
+        font-family: "Nunito", sans-serif;
+        font-size: 50px;
       }
-      a{
-        color: #272727;
-        position: relative;
-        top: 0;
-        left: 1px;
-  
-          font-size: 25px;
-          animation: myfirst 2s linear 2s infinite alternate;
+      p {
+        font-family: "Nunito", sans-serif;
+        font-size: 20px;
+        // margin: 20px 0 0 0 ;
       }
-     
     }
-  }
-  
-  @keyframes myfirst {
-    0% {top: 5px;}
-    25% {top: 10px;}
-    50% {top: 20px;}
-    75% {top: 10px;}
-    100% {top: 0px;}                              
-    
-    
-  }
+    &-left {
+      padding: 20px 0 0 0;
+      img {
+        border: 4px solid #0f0742;
+        // width: 352px;
 
-  @media (max-width: 1600px) {
-    .home{
-      width: 100%;
-      
+        border-radius: 54% 46% 32% 68% / 53% 50% 50% 47%;
+      }
     }
+  }
+  &-scroll {
+    padding: 80px 0px 0px 140px;
+    width: 100px;
+    top: 0;
+    position: relative;
+    p {
+      rotate: -90deg;
+      position: absolute;
+      top: 1px;
+      left: 110px;
+    }
+    a {
+      color: #272727;
+      position: relative;
+      top: 0;
+      left: 1px;
+
+      font-size: 25px;
+      animation: myfirst 2s linear 2s infinite alternate;
+    }
+  }
+}
+
+@keyframes myfirst {
+  0% {
+    top: 5px;
+  }
+  25% {
+    top: 10px;
+  }
+  50% {
+    top: 20px;
+  }
+  75% {
+    top: 10px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+
+@media (max-width: 1600px) {
+  .home {
+    width: 100%;
+  }
 }
 
 @media (max-width: 1200px) {
-    .home{
-      width: 100%;
-      &-main{
-        margin: 100px 70px 0px 70px;
-      }
+  .home {
+    width: 100%;
+    &-main {
+      margin: 100px 70px 0px 70px;
     }
+  }
 }
 @media (max-width: 1100px) {
-  .home{
-    &-main{
+  .home {
+    &-main {
       margin: 100px 40px 0px 40px;
     }
   }
 }
 @media (max-width: 1000px) {
-  .home{
-    &-main{
-      margin: 100px  3% 0px  3%;
+  .home {
+    &-main {
+      margin: 100px 3% 0px 3%;
     }
   }
 }
 @media (max-width: 1000px) {
-  .home{
-    &-main{
+  .home {
+    &-main {
       display: flex;
       flex-wrap: wrap;
     }
   }
 }
 @media (max-width: 615px) {
-  .home{
-    &-main{
+  .home {
+    &-main {
       flex-direction: column-reverse;
-    margin: 3% 0 0 0;
+      margin: 3% 0 0 0;
 
-      &-center{
+      &-center {
         width: 100%;
+        // height: ;
       }
-      &-div{
+      &-div {
         display: flex;
         // flex-direction: column;
-        padding: 20px 0 0 0 ;
+        padding: 20px 0 0 0;
       }
     }
   }
 }
-@media (max-width: 300px) {
-  .home{
-    &-main{
-     
-      &-center{
-        &-div{
-          width: 100%;
-          &-div{
+@media (max-width: 450px) {
+  .home {
+    &-main {
+      &-center {
+        h1{
+          font-size: 40px;
+        }
+        &-div {
+          // width: 100%;
+          &-div {
             width: 50px;
           }
         }
       }
-      &-div{
-       
+      &-div {
       }
-      &-left{
-        img{
+      &-left {
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 300px) {
+  .home {
+    &-main {
+      &-center {
+        &-div {
+          width: 100%;
+          &-div {
+            width: 50px;
+          }
+        }
+      }
+      &-div {
+      }
+      &-left {
+        img {
           width: 100%;
         }
       }
