--- a/sass/skills/Skills.scss
+++ b/sass/skills/Skills.scss
@@ -37,7 +37,7 @@
         &-page{
           display: flex;
           justify-content: space-around;
-          margin: -14px 0 0 0;
+          margin: 0 0 0 0;
           &-div{
             // margin: 4px 0 0 0;
             display: flex;
