--- a/sass/about/About.css
+++ b/sass/about/About.css
@@ -96,6 +96,9 @@
   .about {
     width: 100%;
   }
+  .about-main {
+    margin: 20px 7px 0 0;
+  }
   .about-main-work {
     width: 100%;
   }
@@ -105,7 +108,7 @@
 }
 @media (max-width: 410px) {
   .about-main {
-    margin: 0;
+    margin: 20px 7px 0 0;
   }
   .about-main-work-page {
     display: flex;
