--- a/sass/about/About.scss
+++ b/sass/about/About.scss
@@ -111,6 +111,7 @@
   .about{
     width: 100%;
     &-main{
+      margin: 20px 7px 0 0;
       &-work{
         width: 100%;
         &-page{
@@ -124,7 +125,7 @@
   .about{
     
     &-main{
-      margin: 0;
+      margin: 20px 7px 0 0;
       &-work{
         
         &-page{
