--- a/sass/about/About.scss
+++ b/sass/about/About.scss
@@ -104,7 +104,24 @@
 @media (max-width: 1500px) {
   .about{
     width: 100%;
-   
+  }
+}
+@media (max-width: 900px) {
+  .about {
+    &-main {
+      &-work{
+        &-page{
+          margin: 0;
+        }
+        &-text{
+         margin: 30px 0 0 0;
+        }
+        &-btn{
+          margin: 40px 0 0 0;
+        }
+      }
+     
+    }
   }
 }
 @media (max-width: 480px) {
