--- a/sass/home/Home.css
+++ b/sass/home/Home.css
@@ -19,7 +19,7 @@
 .home {
   font-family: "Nunito", sans-serif;
   width: 1550px;
-  min-height: 90vh;
+  min-height: 110vh;
   background: #ffffff;
 }
 .home-main {
@@ -72,8 +72,7 @@
   padding: 20px 0 0 0;
 }
 .home-main-left img {
-  border: 4px solid #0f0742;
-  border-radius: 54% 46% 32% 68%/53% 50% 50% 47%;
+  width: 450px;
 }
 .home-scroll {
   padding: 80px 0px 0px 140px;
