--- a/sass/home/Home.scss
+++ b/sass/home/Home.scss
@@ -20,7 +20,7 @@
 .home {
   font-family: "Nunito", sans-serif;
   width: 1550px;
-  min-height: 90vh;
+  min-height: 110vh;
   background: #ffffff;
   &-main {
     display: flex;
@@ -73,10 +73,10 @@
     &-left {
       padding: 20px 0 0 0;
       img {
-        border: 4px solid #0f0742;
-        // width: 352px;
+        // border: 4px solid #0f0742;
+        width: 450px;
 
-        border-radius: 54% 46% 32% 68% / 53% 50% 50% 47%;
+        // border-radius: 54% 46% 32% 68% / 53% 50% 50% 47%;
       }
     }
   }
