--- a/sass/home/Home.scss
+++ b/sass/home/Home.scss
@@ -246,7 +246,7 @@
 @media (max-width: 615px) {
   .home {
     &-main {
-      margin: 100px 0 0px 0;
+      margin: 0px 0 0px 0;
       &-div {
         top: 915px;
         right: 87px;
@@ -278,6 +278,7 @@
       &-center {
         height: 225px;
         h1 {
+          top: 20px;
           font-size: 30px;
         }
         p {
@@ -286,6 +287,7 @@
         &-div {
           // width: 100%;
           &-div {
+            top: 750px;
             width: 50px;
           }
           p {
@@ -303,10 +305,31 @@
     }
   }
 }
+@media (max-width: 400px) {
+  .home {
+    &-main {
+     
+        &-div {
+          // width: 100%;
+      
+            top: 818px;
+            width: 50px;
+          }
+      
+    }
+
+  }
+}
 
 @media (max-width: 300px) {
   .home {
     &-main {
+      &-div {
+        // width: 100%;
+        &-div {
+          width: 50px;
+        }
+      }
       &-center {
         &-div {
           width: 100%;
