--- a/sass/home/Home.css
+++ b/sass/home/Home.css
@@ -71,6 +71,7 @@
   left: 0px;
   width: 70px;
   height: 2px;
+  opacity: 0;
   background: #272727;
   animation: div_one 1s linear 1s alternate;
 }
@@ -78,6 +79,7 @@
   position: absolute;
   top: 138px;
   left: 93px;
+  opacity: 0;
   margin: 0px 20px 0 0;
   animation: div-p 1s linear 1s alternate;
 }
@@ -90,6 +92,7 @@
 }
 .home-main-center-page h2 {
   animation: h2 1s linear 0.5s alternate;
+  opacity: 0;
   position: absolute;
   top: 65px;
   font-family: "Nunito", sans-serif;
@@ -103,6 +106,7 @@
   font-family: "Nunito", sans-serif;
   font-size: 20px;
   margin: 20px 0 0 0;
+  opacity: 0;
 }
 .home-main-left {
   padding: 20px 0 0 0;
