--- a/sass/home/Home.scss
+++ b/sass/home/Home.scss
@@ -70,6 +70,7 @@
             left: 0px;
             width: 70px;
             height: 2px;
+            opacity: 0;
             background: #272727;
             animation: div_one 1s linear 1s alternate;
           }
@@ -77,6 +78,7 @@
             position: absolute;
             top: 138px;
             left: 93px;
+            opacity: 0;
             margin: 0px 20px 0 0;
             animation: div-p 1s linear 1s alternate;
           }
@@ -87,10 +89,11 @@
           animation: h1 1s linear 0s alternate;
           font-family: "Nunito", sans-serif;
           font-size: 50px;
+
         }
         h2 {
           animation: h2 1s linear 0.5s alternate;
-
+opacity: 0;
           position: absolute;
           top: 65px;
           font-family: "Nunito", sans-serif;
@@ -104,6 +107,7 @@
           font-family: "Nunito", sans-serif;
           font-size: 20px;
           margin: 20px 0 0 0;
+          opacity: 0;
         }
       }
     }
