--- a/sass/about/About.scss
+++ b/sass/about/About.scss
@@ -124,9 +124,12 @@
     }
   }
 }
-@media (max-width: 480px) {
+@media (max-width: 474px) {
   .about{
     width: 100%;
+    h1{
+      font-size: 30px;
+    }
     &-main{
       margin: 20px 0 0 0;
       &-work{
