--- a/sass/home/Home.scss
+++ b/sass/home/Home.scss
@@ -33,10 +33,13 @@
       &-page {
         // padding: 60px 0 0 0;
         animation: icons 1s linear 0s 1 ;
+        display: flex;
+        flex-direction: column;
           
-          
-        &-i {
-          padding: 20px;
+        a {
+          text-decoration: none;
+          color: #272727;
+          padding: 50px 0 0 0 ;
           i {
             font-size: 25px;
           }
@@ -210,7 +213,9 @@
         &-page {
           width: 100%;
           display: flex;
-          justify-content: center;
+          // justify-content: center;
+          flex-direction: inherit;
+    justify-content: space-around;
         }
       }
       &-center {
