--- a/sass/portfolio/Portfolio.css
+++ b/sass/portfolio/Portfolio.css
@@ -41,16 +41,16 @@
 }
 .portfolio-main-page-div {
   width: 400px;
-  padding: 0 0 20px 0;
+  padding: 0 0 0 0;
   background: white;
-  border-radius: 20px;
+  border-radius: 5px;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
   margin: 30px 30px;
 }
 .portfolio-main-page-div img {
-  width: 350px;
-  border-radius: 20px;
-  margin: 15px 0 0 25px;
+  width: 100%;
+  border-radius: 5px;
+  margin: 0;
 }
 .portfolio-main-page-div-true .p {
   color: #272727;
@@ -59,13 +59,14 @@
   margin: 10px 10px 0 25px;
   font-weight: 700;
 }
-.portfolio-main-page-div-true button {
+.portfolio-main-page-div-true a {
   margin: 10px 0px 0 24px;
   font-size: 15px;
   color: #272727;
   font-family: "Nunito", sans-serif;
   background: none;
   border: none;
+  text-decoration: none;
 }
 
 @media (max-width: 1200px) {
