--- a/sass/portfolio/Portfolio.css
+++ b/sass/portfolio/Portfolio.css
@@ -86,11 +86,14 @@
   }
 }
 @media (max-width: 400px) {
-  .portfolio-main-page-div {
+  .portfolio {
     width: 100%;
   }
-  .portfolio-main-page-div img {
-    width: 90%;
-    margin: 2px;
+  .portfolio-main-page {
+    margin: 50px 0 0 0;
+    text-align: center;
+  }
+  .portfolio-main-page-div {
+    margin: 20px 0;
   }
 }/*# sourceMappingURL=Portfolio.css.map */
