--- a/sass/portfolio/Portfolio.scss
+++ b/sass/portfolio/Portfolio.scss
@@ -92,6 +92,7 @@
   .portfolio {
     width: 100%;
     &-main {
+      width: 100%;
       &-page {
         margin: 50px 0 0 0;
         text-align: center;
@@ -106,6 +107,7 @@
   .portfolio {
     width: 100%;
     &-main {
+     
       &-page {
         margin: 50px 0 0 0;
         text-align: center;
