--- a/sass/portfolio/Portfolio.css
+++ b/sass/portfolio/Portfolio.css
@@ -77,6 +77,9 @@
   .portfolio {
     width: 100%;
   }
+  .portfolio-main {
+    width: 100%;
+  }
   .portfolio-main-page {
     margin: 50px 0 0 0;
     text-align: center;
