--- a/sass/home/Home.css
+++ b/sass/home/Home.css
@@ -101,12 +101,11 @@
   transform: translate(0, 50%);
 }
 .home-main-left {
-  padding: 20px 0 0 0;
+  margin: 20px 0 0 0;
   width: 450px;
-  height: 300px;
 }
 .home-main-left img {
-  width: 450px;
+  width: 100%;
   animation: left 1s linear 0s 1;
   right: 0;
 }
@@ -155,9 +154,6 @@
   }
 }
 @media (max-width: 1100px) {
-  .home {
-    min-height: 146vh;
-  }
   .home-main {
     margin: 100px 0 0px 0;
   }
@@ -229,9 +225,6 @@
   }
 }
 @media (max-width: 400px) {
-  .home {
-    min-height: 121vh;
-  }
   .home-main-div {
     width: 100%;
   }
