--- a/sass/home/Home.scss
+++ b/sass/home/Home.scss
@@ -16,11 +16,14 @@
     margin: 0 15px 0 15px;
   }
 }
-
+.h{
+    height: 800px;
+    width: 100%;
+}
 .home {
   font-family: "Nunito", sans-serif;
   width: 1550px;
-  min-height: 110vh;
+
   background: #ffffff;
   &-main {
     display: flex;
@@ -187,6 +190,9 @@
   }
 }
 @media (max-width: 1000px) {
+  .h{
+      height: 933px;
+  }
   .home {
     &-main {
       margin: 100px 3% 0px 3%;
@@ -195,10 +201,11 @@
     }
   }
 }
-
+@media (max-width: 900px) {
+ 
+}
 @media (max-width: 900px) {
   .home {
-    
     &-main {
       display: flex;
       &-btn {
@@ -241,6 +248,9 @@
   }
 }
 @media (max-width: 475px) {
+  .h{
+    height: 860px;
+}
   .home {
    
     &-main {
@@ -276,6 +286,9 @@
   }
 }
 @media (max-width: 400px) {
+  .h{
+    height: 798px;
+}
   .home {
     // min-height: 121vh;
     &-main {
@@ -287,6 +300,9 @@
 }
 
 @media (max-width: 300px) {
+  .h{
+    height: 798px;
+}
   .home {
     
     &-main {
