--- a/sass/about/About.scss
+++ b/sass/about/About.scss
@@ -2,6 +2,7 @@
     background: #FFFFFF;
      width: 1500px;
      min-height: 100vh;
+     margin-top: 60px;
      // display: flex;
      // // justify-content: s;
      // align-items: center;
