--- a/sass/header/header.css
+++ b/sass/header/header.css
@@ -6,7 +6,8 @@ html {
   scroll-behavior: auto;
   width: 97%;
   position: fixed;
-  top: 85vh;
+  top: 86vh;
+  transition-timing-function: 2s;
   left: 0;
   right: 0;
   margin-left: auto;
