--- a/sass/portfolio/Portfolio.css
+++ b/sass/portfolio/Portfolio.css
@@ -1,7 +1,8 @@
 .portfolio {
   background: #ffffff;
   width: 100%;
-  min-height: 90vh;
+  min-height: 100vh;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
