--- a/sass/portfolio/Portfolio.scss
+++ b/sass/portfolio/Portfolio.scss
@@ -1,8 +1,9 @@
 .portfolio {
   background: #ffffff;
   width: 100%;
-  min-height: 90vh;
+  min-height: 100vh;
   // text-align: center;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
