--- a/sass/skills/Skills.scss
+++ b/sass/skills/Skills.scss
@@ -43,6 +43,10 @@
           font-family: 'Nunito', sans-serif; 
           font-size: 20px;
         }
+        .image{
+          width: 100%;
+          height: 100%;
+        }
       }
      }
      &-page2{
